deploy/kubectl/annotated-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: annotated
  annotations:
    alehechka/feature-branch: feature/annotated
