deploy/kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external
  namespace: default
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
    tier: web
