deploy/kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-external
  namespace: default
spec:
  tls:
    - hosts:
        - external.lehechka.com
  rules:
    - host: external.lehechka.com
      http:
        paths:
          - backend:
              service:
                name: nginx-external
                port:
                  number: 80
            path: /
            pathType: Prefix
